# seaMass-alpha

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_gcc.sh  build_icc.sh  build_icx.sh  cmake-vs10.bat  cmake.sh  cmake_clang_homebrew.sh  cmake_gcc.sh  cmake_icc.sh  cmake_intel14_msvc2012_64.bat  cmake_intel14_msvc2013_64.bat  cmake_intel15_msvc2012_64.bat  cmake_msvc64_2013.bat  cmake_msvc64_2022.bat  cmake_xcode.sh  data.sh  debug_vs10_intel14_x64.bat  make.sh  make_gcc.sh  make_icc.sh  release_vs10_intel14_x64.bat  runtests.jl
asrl/: Asrl.cpp  Asrl.hpp  Basis.cpp  Basis.hpp  BasisMatrix.cpp  BasisMatrix.hpp  BasisMatrixGroup.cpp  BasisMatrixGroup.hpp  CMakeLists.txt  Optimizer.cpp  Optimizer.hpp  OptimizerAccelerationEve1.cpp  OptimizerAccelerationEve1.hpp  OptimizerSrl.cpp  OptimizerSrl.hpp  SeamassAsrl.cpp  SeamassAsrl.hpp
cmake/Modules/: FindIntel.cmake  FindIntelOpenMP.cmake  FindMKL.cmake  FindOldIntel.cmake  FindOldNetCDF.cmake  FindPugiXML.cmake  FindSpatialIndex.cmake
commandline/: CMakeLists.txt  asrl.cpp  centroid.cpp  driams_raw2binned.cpp  fastsmltiff.m  genisodists.cpp  image2sml.cpp  mgf2sml.cpp  msp2sml.cpp  mzmlb2smb.cpp  mzmlb2smi.cpp  seamass-asrl.cpp  seamass-core.cpp  seamass-peak.cpp  seamass-peak.hpp  seamass-restore.cpp  seamass-restore.hpp  seamass-td.cpp  seamass.cpp  seamass2controlpoints.cpp  smb-split.cpp  smb-split.hpp  smb2mzmlb.cpp  smv2smb.cpp  tiff2sml.cpp
core/: BSpline.cpp  BSpline.hpp  Basis.cpp  Basis.hpp  BasisBspline.cpp  BasisBspline.hpp  BasisBsplineCharge.cpp  BasisBsplineCharge.hpp  BasisBsplineMz.cpp  BasisBsplineMz.hpp  BasisBsplinePeak.cpp  BasisBsplinePeak.hpp  BasisBsplineScale.cpp  BasisBsplineScale.hpp  BasisBsplineScantime.cpp  BasisBsplineScantime.hpp  BasisFunctions.cpp  BasisFunctions.hpp  Bspline.cpp  Bspline.hpp  CMakeLists.txt  Dataset.cpp  Dataset.hpp  DatasetMzmlb.cpp  DatasetMzmlb.hpp  DatasetMzmlb.tpp  DatasetSeamass.cpp  DatasetSeamass.hpp  DatasetTiff.cpp  DatasetTiff.hpp  HDF5File.cpp  HDF5File.hpp  Matrix.cpp  Matrix.hpp  MatrixSparse.cpp  MatrixSparse.hpp  OptimiserASRL.cpp  OptimiserASRL.hpp  Optimizer.cpp  Optimizer.hpp  (+21 more)
data/: HYE110_TTOF6600_32fix_lgillet_I160308_001__index_34500_35500__mzWindow_644_649.mzMLb  HYE110_TTOF6600_32fix_lgillet_I160308_001__index_34990.mzMLb  HYE124_TTOF6600_64var_lgillet_I150211_008__index_59994.mzMLb  P02U_Swath_1_1D.mzMLb  P02U_Swath_1_1D.pos_617.55.smi  P02U_Swath_1_1D.pos_617.55.smo  P02U_Swath_1_1D.pos_617.55.smv  P02U_Swath_1__mzWindow_602_605__scanTime_2300_3500__index3163.mzMLb
docs/: Setup.ipynb  memory.jl  seaMass-1D.ipynb  seaMass_SWATH.ipynb
image/: CMakeLists.txt  imagecore.cpp  imagecore.hpp  smimage.cpp
io/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  DatasetMzmlb.cpp  DatasetMzmlb.hpp  DatasetMzmlb.tpp  DatasetSeamass.cpp  DatasetSeamass.hpp  DatasetSmi.cpp  DatasetSmi.hpp  FileNetcdf.cpp  FileNetcdf.hpp  FileNetcdf.tpp  HDF5Writer.cpp  HDF5Writer.hpp  MSFileData.cpp  MSFileData.hpp  MzMLb.cpp  MzMLb.hpp  NetCDFile.cpp  NetCDFile.hpp  NetCDFile.tpp  NetcdfWriter.cpp  NetcdfWriter.hpp  ObserverMatrix.cpp  ObserverMatrix.hpp  ObserverMatrixSparse.cpp  ObserverMatrixSparse.hpp  RTreeReader.cpp  RTreeReader.hpp  SMOWriter.cpp  SMVWriter.hpp  VecMat.hpp  VecMat.tpp  iomath.hpp  iomath.tpp  mzMLxml.cpp  mzMLxml.hpp  mzMLxml.tpp
julia/: Seamass.jl  plotly.ipynb  plotlyjs.ipynb  plots1d.jl  pyplot.ipynb  seaMass-1D.ipynb  test.ipynb
kernel/: CMakeLists.txt  FileNetcdf.cpp  FileNetcdf.hpp  FileNetcdf.tpp  MKL.cpp  MKL.hpp  Matrix.hpp  MatrixMKL.cpp  MatrixMKL.hpp  MatrixSparseMKL.cpp  MatrixSparseMKL.hpp  NetCdfFile.tpp  NetcdfFile.cpp  NetcdfFile.hpp  NetcdfFile.tpp  Observer.cpp  Observer.hpp  Subject.cpp  Subject.hpp  SubjectMatrix.cpp  SubjectMatrix.hpp  SubjectMatrixSparse.cpp  SubjectMatrixSparse.hpp  VecMat.hpp  VecMat.tpp  kernel.hpp
kernel/intel/: CMakeLists.txt  Callback.cpp  Callback.hpp  Matrix.cpp  Matrix.hpp  MatrixSparse.cpp  MatrixSparse.hpp  kernel.cpp  kernel.hpp  types.hpp
math/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixMKL.cpp  MatrixMKL.hpp  MatrixSparse.cpp  MatrixSparse.hpp  MatrixSparseMKL.cpp  MatrixSparseMKL.hpp
peak/: BsplineData.hpp  BsplineData.tpp  CMakeLists.txt  MathOperator.hpp  MathOperator.tpp  PeakData.hpp  PeakData.tpp  PeakManager.hpp  PeakOperator.hpp  PeakOperator.tpp  SMData.hpp  SMData.tpp  smpeak.cpp
restoration/: CMakeLists.txt  MSFileData.cpp  MSFileData.hpp  restoration.cpp
seamass/: BasisFunctions.cpp  BasisFunctions.hpp  CMakeLists.txt  HDF5File.cpp  NetCDFile.cpp  NetCDFile.hpp  OptimiserASRL.cpp  OptimiserASRL.hpp  SMOFile.cpp  SMOFile.hpp  SMOWriter.cpp  SMOWriter.hpp  SMVWriter.cpp  SMVWriter.hpp  VizFile.cpp  VizFile.hpp  core.cpp  core.hpp  seamass.cpp  seamass.hpp
smimage/: CMakeLists.txt  SMGWriter.cpp  SMGWriter.hpp  SmrWriter.cpp  SmrWriter.hpp  core.cpp  core.hpp  imagecore.cpp  imagecore.hpp  smimage.cpp
smpeak/: BsplineData.cpp  BsplineData.hpp  BsplineData.tpp  CMakeLists.txt  MathOperator.cpp  MathOperator.hpp  MathOperator.tpp  NetCDFile.cpp  NetCDFile.hpp  NetCDFile.tpp  PeakCmd.hpp  PeakData.hpp  PeakData.tpp  PeakManager.hpp  PeakOperator.hpp  PeakOperator.tpp  SMData.cpp  SMData.hpp  SMData.tpp  SMPFile.cpp  SMPFile.hpp  peakcore.cpp  peakcore.hpp  peakcore.tpp  peakdata.cpp  peakdata.hpp  peakdata.tpp  smpeak.cpp
topdown/: BasisChargeDistribution.cpp  BasisChargeDistribution.hpp  BasisIsotopeDistribution.cpp  BasisIsotopeDistribution.hpp  CMakeLists.txt  SeamassTopdown.cpp  SeamassTopdown.hpp
viz_client/: CMakeLists.txt  viz_client.cpp
