cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project(seamass C CXX)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

add_subdirectory(math)
add_subdirectory(core)
add_subdirectory(topdown)
add_subdirectory(io)
add_subdirectory(commandline)
add_subdirectory(smpeak)
