add_library(seamass_asrl
        Basis.cpp
        Basis.hpp
        BasisMatrix.cpp
        BasisMatrix.hpp
        BasisMatrixGroup.cpp
        BasisMatrixGroup.hpp
        Optimizer.cpp
        Optimizer.hpp
        OptimizerSrl.cpp
        OptimizerSrl.hpp
        OptimizerAccelerationEve1.cpp
        OptimizerAccelerationEve1.hpp
        Asrl.cpp
        Asrl.hpp
        )

target_link_libraries(seamass_asrl
        seamass_kernel
        )
